--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     
     <section class="products">
       <div class="product">
-        <img src="https://via.placeholder.com/300x300" alt="红酒">
+        <img src="./Image1.jpg" alt="红酒">
         <h2>黔王金奖酒</h2>
         <p>黔王金奖酒是中国贵州茅台酒厂生产的一款高档酒品。它以优质的高粱、大米和天然泉水为原料，采用传统的酿造工艺和长期陈放的方法制成。这种酒体色泽透亮，香气浓郁，入口绵柔、回味悠长，口感醇厚。黔王金奖酒是茅台酒厂的一种稀有酒品，每年的产量都非常有限。因此，它备受酒类收藏家的追捧，并被誉为中国高端白酒中的珍品之一。
 
