--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <li><a href="#">关于我们</a></li>
           <li><a href="#">葡萄酒</a></li>
           <li><a href="#">联系我们</a></li>
+          <li><a href="./apps.html">小运用</a></li>
         </ul>
       </nav>
     </header>
