--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <li><a href="#">联系我们</a></li>
           <li><a href="./apps.html">小运用</a></li>
 	  <li><a href="./unitconversiont.html">单位转换器中文</a></li>
+	  <li><a href="./displaytime.html">世界时钟</a></li>
         </ul>
       </nav>
     </header>
