--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           <li><a href="./apps.html">小运用</a></li>
 	  <li><a href="./unitconversiont.html">单位转换器中文</a></li>
 	  <li><a href="./displaytime.html">世界时钟</a></li>
-	  <li><a href="./iislocation.html">国际空间站位置</a></li>	
+	  <li><a href="./iislocation.html">国际空间站位置</a></li>
+	  <li><a href="./displaytimeasia.html">亚洲国家当前时间</a></li>	
         </ul>
       </nav>
     </header>
