--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 	  <li><a href="./unitconversiont.html">单位转换器中文</a></li>
 	  <li><a href="./displaytime.html">世界时钟</a></li>
 	  <li><a href="./iislocation.html">国际空间站位置</a></li>
-	  <li><a href="./displaytimeasia.html">亚洲国家当前时间</a></li>	
+	  <li><a href="./displaytimeasia.html">亚洲国家当前时间</a></li>
+	  <li><a href="./chinasunsetsunrisetime.html">中国日出日落时间</a></li>	
         </ul>
       </nav>
     </header>
