--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 	  <li><a href="./iislocation.html">国际空间站位置</a></li>
 	  <li><a href="./displaytimeasia.html">亚洲国家当前时间</a></li>
 	  <li><a href="./chinasunsetsunrisetime.html">中国日出日落时间</a></li>	
+	  <li><a href="./fishnamegame.html">渔名游戏</a></li>	
         </ul>
       </nav>
     </header>
