--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 	  <li><a href="./fishnamegame.html">渔名游戏</a></li>	
           <li><a href="./fishfoodnamegame.html">鱼食命名游戏</a></li>
 	  <li><a href="./teanamegame.html">茶叶命名游戏</a></li>
+	  <li><a href="./graph_max_matching.html">make_graph_and_compute_max_matching</a></li>	
         </ul>
       </nav>
     </header>
