--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <li><a href="./fishfoodnamegame.html">鱼食命名游戏</a></li>
 	  <li><a href="./teanamegame.html">茶叶命名游戏</a></li>
 	  <li><a href="./graph_max_matching.html">make_graph_and_compute_max_matching</a></li>	
+	  <li><a href="./graph_min_coloring.html">make_graph_and_compute_min_vertex_coloring</a></li>		
         </ul>
       </nav>
     </header>
