--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 	  <li><a href="./graph_max_matching.html">make_graph_and_compute_max_matching</a></li>	
 	  <li><a href="./graph_min_coloring.html">make_graph_and_compute_min_vertex_coloring</a></li>
 	  <li><a href="./quadratic_residue.html">二次剩余模n计算器</a></li>
+          <li><a href="https://daguang123456.github.io/exampleapp/">硬币游戏</a></li>
         </ul>
       </nav>
     </header>
