--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 	  <li><a href="./quadratic_residue.html">二次剩余模n计算器</a></li>
           <li><a href="https://daguang123456.github.io/exampleapp/">硬币游戏</a></li>
 	  <li><a href="https://daguang123456.github.io/apiexample/">皮肤病检测器</a></li>
+	  <li><a href="https://daguang123456.github.io/my-app/">药物信息查询</a></li>
         </ul>
       </nav>
     </header>
