--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 	  <li><a href="https://daguang123456.github.io/apiexample/">皮肤病检测器</a></li>
 	  <li><a href="https://daguang123456.github.io/my-app/">药物信息查询</a></li>    
           <li><a href="pyrepl.html">Python 编译器</a></li>
+	  <li><a href="irisclassify.html">iris classify</a></li>	
+		
+		
 		
         </ul>
       </nav>
