--- a/irisclassify.html
+++ b/irisclassify.html
@@ -77,26 +77,23 @@
 			var pw = parseFloat(document.getElementById("pw").value);
 
 
-			if(isNaN(tempStartTime)){
-				document.getElementById("tagMessage").innerHTML= "错误：输入的开始时间不是数字。(error:the starting time entered is not a number.)";
+			if(isNaN(sl)){
+				document.getElementById("tagMessage").innerHTML= "错误：输入的萼片长度不是数字。(error:the starting time entered is not a number.)";
 				return -1;
 			}
-			if(tempStartTime < 0){
-				document.getElementById("tagMessage").innerHTML= "错误：输入的开始时间必须不为负。(error: the starting time entered needs to be no negative)";
+			if(sl < 0){
+				document.getElementById("tagMessage").innerHTML= "错误：萼片长度不为负。(error: the starting time entered needs to be no negative)";
 				return -1;
 			}
-			if(isNaN(tempFinishTime)){
-				document.getElementById("tagMessage").innerHTML= "错误：输入的结束时间不是数字。(error:the end time entered is not a number)";
+			if(isNaN(sw)){
+				document.getElementById("tagMessage").innerHTML= "错误：输入的萼片宽度不是数字。(error:the end time entered is not a number)";
 				return -1;
 			}
-			if(tempFinishTime < 0){
-				document.getElementById("tagMessage").innerHTML= "错误：输入的结束时间必须不为负。(error: the end time needs to be no negative)";
+			if(sw < 0){
+				document.getElementById("tagMessage").innerHTML= "错误：萼片宽度不为负。(error: the end time needs to be no negative)";
 				return -1;
 			}
-			if(tempStartTime > tempFinishTime){
-				document.getElementById("tagMessage").innerHTML= "错误：结束时间必须大于开始时间(error: the end time needs to be larger than start time)";
-				return -1;
-			}
+
 
 	jsdomath = pyscript.interpreter.globals.get('irisprediciton');
 	console.log(jsdomath(sl,sw,pl,pw));
