--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	  <li><a href="https://daguang123456.github.io/my-app/">药物信息查询</a></li>    
           <li><a href="pyrepl.html">Python 编译器</a></li>
 	  <li><a href="irisclassify.html">虹膜类种分类</a></li>	
+	  <li><a href="https://daguang123456.github.io/my-earthquake-app/">查询地震信息</a></li>
 		
 		
 		
