--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <li><a href="pyrepl.html">Python 编译器</a></li>
 	  <li><a href="irisclassify.html">虹膜类种分类</a></li>	
 	  <li><a href="https://daguang123456.github.io/my-earthquake-app/">查询地震信息</a></li>
+	  <li><a href="./netflixmovie.html">Netflix movies(titorial<a href="https://testdriven.io/blog/build-spa-with-python-part-2/"></a></a></li>
 		
 		
 		
