--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 	  <li><a href="irisclassify.html">虹膜类种分类</a></li>	
 	  <li><a href="https://daguang123456.github.io/my-earthquake-app/">查询地震信息</a></li>
 	  <li><a href="./netflixmovie.html">Netflix movies(titorial<a href="https://testdriven.io/blog/build-spa-with-python-part-2/"></a></a></li>
+	  <li><a href="https://daguang123456-random-ml-app-app-026fdz.streamlit.app/">随机数字</a></li>
+	  <li><a href="https://daguang123456-streamlit-brain-mri-app-eai1a3.streamlit.app/">脑x-ray分类，弱</a></li>
 		
 		
 		
