--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 	  <li><a href="./netflixmovie.html">Netflix movies(titorial<a href="https://testdriven.io/blog/build-spa-with-python-part-2/"></a></a></li>
 	  <li><a href="https://daguang123456-random-ml-app-app-026fdz.streamlit.app/">随机数字</a></li>
 	  <li><a href="https://daguang123456-streamlit-brain-mri-app-eai1a3.streamlit.app/">脑x-ray分类，弱</a></li>
+          <li><a href="https://daguang123456-streamlit-general-image-classification-app-jozi51.streamlit.app/">resnet常规图像分类</a></li>
 		
 		
 		
