--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 	  <li><a href="https://daguang123456-random-ml-app-app-026fdz.streamlit.app/">随机数字</a></li>
 	  <li><a href="https://daguang123456-streamlit-brain-mri-app-eai1a3.streamlit.app/">脑x-ray分类，弱</a></li>
           <li><a href="https://daguang123456-streamlit-general-image-classification-app-jozi51.streamlit.app/">resnet常规图像分类</a></li>
+          <li><a href="https://daguang123456-ant-bee-streamlit-app-kll323.streamlit.app/">蚂蚁vs蜜蜂图像分类</a></li>
+          <li><a href="https://daguang123456-mnist-digit-gan-app-3m2lqw.streamlit.app/">mnist数字图像生成</a></li>
 		
 		
 		
