--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
           <li><a href="https://daguang123456-streamlit-general-image-classification-app-jozi51.streamlit.app/">resnet常规图像分类</a></li>
           <li><a href="https://daguang123456-ant-bee-streamlit-app-kll323.streamlit.app/">蚂蚁vs蜜蜂图像分类</a></li>
           <li><a href="https://daguang123456-mnist-digit-gan-app-3m2lqw.streamlit.app/">mnist数字图像生成</a></li>
+ 	<li><a href="https://daguang123456-weather-image-classify-streamlit-app-nz8l3g.streamlit.app/">天气图像分类</a></li>
+	<li><a href="https://daguang123456-sklearnmodeldemo-main-xucnmx.streamlit.app/">sklearn demo</a></li>
+
 		
 		
 		
