--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
           <li><a href="https://daguang123456-mnist-digit-gan-app-3m2lqw.streamlit.app/">mnist数字图像生成</a></li>
  	<li><a href="https://daguang123456-weather-image-classify-streamlit-app-nz8l3g.streamlit.app/">天气图像分类</a></li>
 	<li><a href="https://daguang123456-sklearnmodeldemo-main-xucnmx.streamlit.app/">sklearn demo</a></li>
+	<li><a href="https://daguang123456-stockappstreamlit-main-ct5o5f.streamlit.app/">工程师的薪水</a></li>	
+		
 
 		
 		
